input-templates/update-manifests-yaml-octopub/octopub-audits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-audit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auditservice
  template:
    metadata:
      labels:
        component: auditservice
    spec:
      containers:
        - name: auditservice
          image: #{Octopus.Action.Package[octopub-audit-microservice].PackageId}:#{Octopus.Action.Package[octopub-audit-microservice].PackageVersion}
          ports:
            - name: http-audit
              containerPort: 10000
