input-templates/update-manifests-yaml-octopub/octopub-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: #{Octopus.Action.Package[octopub-frontend].Registry}/#{Octopus.Action.Package[octopub-frontend].PackageId}:#{Octopus.Action.Package[octopub-frontend].PackageVersion}
          ports:
            - containerPort: 8080
              name: http-port
