input-templates/update-manifests-yaml-octopub/octopub-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-productservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: productservice
  template:
    metadata:
      labels:
        component: productservice
    spec:
      containers:
        - name: productservice
          image: #{Octopus.Action.Package[octopub-products-microservice].PackageId}:#{Octopus.Action.Package[octopub-products-microservice].PackageVersion}
          ports:
            - name: http-product
              containerPort: 8083
